--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tinymce/miniature": "^6.0.0",
+    "@tinymce/tinymce-react": "^6.2.0",
     "luxon": "^3.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tinymce": "^7.9.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
