--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "luxon": "^3.6.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.1",
     "tinymce": "^7.9.1",
     "uuid": "^11.1.0"
   },
