--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
-    "react-router-dom": "^7.6.1",
     "tinymce": "^7.9.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@types/luxon": "^3.6.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
