--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
+    "sweetalert2": "^11.22.0",
     "tinymce": "^7.9.1",
     "uuid": "^11.1.0"
   },
