--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@tinymce/miniature": "^6.0.0",
     "@tinymce/tinymce-react": "^6.2.0",
     "lucide-react": "^0.511.0",
