--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
+    "@stomp/stompjs": "^7.1.1",
     "@tinymce/miniature": "^6.0.0",
     "@tinymce/tinymce-react": "^6.2.0",
     "jspdf": "^3.0.1",
@@ -22,6 +23,7 @@
     "react-google-charts": "^5.2.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
+    "sockjs-client": "^1.6.1",
     "sweetalert2": "^11.22.0",
     "tinymce": "^7.9.1",
     "uuid": "^11.1.0"
@@ -32,6 +34,7 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/react-router-dom": "^5.3.3",
+    "@types/sockjs-client": "^1.5.4",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.25.0",
